Updated exec, cleaned cli
  The cmd argument passed through to the exec module was causing a problem, so I've decided to remove it, which resulted in less code and fixed a bug.

less code + bug fixing FTW

--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
   "bugs": {
     "url": "https://github.com/trainyard/choo-cli/issues"
   },
-  "homepage": "https://github.com/trainyard/choo-cli#readme"
+  "homepage": "https://github.com/trainyard/choo-cli#readme",
+  "devDependencies": {
+    "eslint": "^3.1.1",
+    "standard": "^7.1.2"
+  }
 }
