--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@choo/choo-cli",
+  "name": "@choo/cli",
   "version": "0.0.0",
   "description": "out-of-the-box tooling and scaffolding for choo.js",
   "bin": {
@@ -8,15 +8,13 @@
     "choo-init": "bin/choo-init.js"
   },
   "dependencies": {
-    "escodegen": "^1.8.0",
-    "esprima": "^2.7.2",
-    "generator-choo": "https://github.com/trainyard/generator-choo",
-    "lodash.kebabcase": "^4.0.1",
-    "markdown-chalk": "^1.4.0",
+    "mem-fs": "^1.1.3",
+    "mem-fs-editor": "^2.3.0",
     "minimist": "^1.2.0",
     "ramda": "^0.21.0",
-    "yeoman-generator": "^0.24.1",
-    "yo": "^1.8.4"
+    "resolve": "^1.1.7",
+    "walk-back": "^2.0.1",
+    "yamljs": "^0.2.8"
   },
   "scripts": {
     "test": "NODE_ENV=test tape --require ./tests/**/*.js | tap-summary"
