--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "choo-generate": "bin/choo-generate.js"
   },
   "dependencies": {
+    "cross-spawn": "^4.0.0",
     "mem-fs": "^1.1.3",
     "mem-fs-editor": "^2.3.0",
     "minimist": "^1.2.0",
