--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@choo/cli",
+  "name": "choo-cli",
   "version": "0.1.0",
-  "description": "out-of-the-box tooling and scaffolding for choo.js",
+  "description": "create choo apps from the command line",
   "bin": {
     "choo": "bin/cli.js",
     "choo-new": "bin/choo-new.js",
