--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "walk-back": "^2.0.1",
     "yamljs": "^0.2.8"
   },
+  "engines" : { 
+    "node" : ">=4",
+    "npm": ">=3" 
+  }, 
   "scripts": {
     "test": "NODE_ENV=test tape --require ./tests/**/*.js | tap-summary"
   },
@@ -43,7 +47,6 @@
   },
   "homepage": "https://github.com/trainyard/choo-cli#readme",
   "devDependencies": {
-    "eslint": "^3.1.1",
     "standard": "^7.1.2"
   }
 }
