--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "cross-spawn": "^4.0.0",
+    "inquirer": "^1.1.2",
     "lodash": "^4.14.1",
     "mem-fs": "^1.1.3",
     "mem-fs-editor": "^2.3.0",
