--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "npm": ">=3"
   },
   "scripts": {
-    "test": "NODE_ENV=test tape --require ./tests/**/*.js | tap-summary"
+    "clean": "rimraf temp",
+    "pretest": "npm run clean",
+    "posttest": "npm run clean",
+    "test": "standard | snazzy && NODE_ENV=test tape --require ./tests/**/*.js | tap-summary"
   },
   "repository": {
     "type": "git",
@@ -49,7 +52,13 @@
   },
   "homepage": "https://github.com/trainyard/choo-cli#readme",
   "devDependencies": {
-    "standard": "^7.1.2"
+    "clinton": "^0.7.1",
+    "file-exists": "^2.0.0",
+    "rimraf": "^2.5.4",
+    "snazzy": "^4.0.0",
+    "standard": "^7.1.2",
+    "tap-summary": "^3.0.1",
+    "tape": "^4.6.0"
   },
   "standard": {
     "ignore": [
