--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "choo-generate": "bin/choo-generate.js"
   },
   "dependencies": {
+    "chalkline": "0.0.5",
+    "cli-spinners": "^0.2.0",
     "cross-spawn": "^4.0.0",
     "inquirer": "^1.1.2",
+    "left-pad": "^1.1.1",
     "lodash": "^4.14.1",
     "mem-fs": "^1.1.3",
     "mem-fs-editor": "^2.3.0",
