--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "choo-generate": "bin/choo-generate.js"
   },
   "dependencies": {
+    "chalk": "^1.1.3",
     "chalkline": "0.0.5",
     "cli-spinners": "^0.2.0",
     "cross-spawn": "^4.0.0",
+    "ejs-compile": "0.0.1",
+    "git-js": "^1.1.1",
     "inquirer": "^1.1.2",
     "left-pad": "^1.1.1",
     "lodash": "^4.14.1",
     "mem-fs": "^1.1.3",
     "mem-fs-editor": "^2.3.0",
     "minimist": "^1.2.0",
+    "nodegit": "^0.14.1",
     "ramda": "^0.21.0",
     "resolve": "^1.1.7",
     "walk-back": "^2.0.1",
