--- a/package.json
+++ b/package.json
@@ -12,15 +12,12 @@
     "chalkline": "0.0.5",
     "cli-spinners": "^0.2.0",
     "cross-spawn": "^4.0.0",
-    "ejs-compile": "0.0.1",
-    "git-js": "^1.1.1",
     "inquirer": "^1.1.2",
     "left-pad": "^1.1.1",
     "lodash": "^4.14.1",
     "mem-fs": "^1.1.3",
     "mem-fs-editor": "^2.3.0",
     "minimist": "^1.2.0",
-    "nodegit": "^0.14.1",
     "ramda": "^0.21.0",
     "resolve": "^1.1.7",
     "walk-back": "^2.0.1",
@@ -32,6 +29,7 @@
   },
   "scripts": {
     "clean": "rimraf temp",
+    "deps": "dependency-check . && dependency-check . --extra --no-dev",
     "pretest": "npm run clean",
     "posttest": "npm run clean",
     "test": "standard | snazzy && NODE_ENV=test tape --require ./tests/**/*.js | tap-summary"
@@ -60,6 +58,7 @@
   "homepage": "https://github.com/trainyard/choo-cli#readme",
   "devDependencies": {
     "clinton": "^0.7.1",
+    "dependency-check": "^2.6.0",
     "file-exists": "^2.0.0",
     "rimraf": "^2.5.4",
     "snazzy": "^4.0.0",
