--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "minimist": "^1.2.0",
     "ramda": "^0.22.1",
     "resolve": "^1.1.7",
+    "rimraf": "^2.5.4",    
     "walk-back": "^2.0.1",
     "yamljs": "^0.2.8"
   },
@@ -32,7 +33,8 @@
     "deps": "dependency-check . && dependency-check . --extra --no-dev",
     "pretest": "npm run clean",
     "posttest": "npm run clean",
-    "test": "standard | snazzy && NODE_ENV=test tape --require ./tests/**/*.js | tap-summary"
+    "test": "standard --fix | snazzy && NODE_ENV=test tape --require ./tests/**/*.js | tap-summary",
+    "lint": "standard --fix"
   },
   "repository": {
     "type": "git",
@@ -60,7 +62,6 @@
     "clinton": "^0.8.0",
     "dependency-check": "^2.6.0",
     "file-exists": "^2.0.0",
-    "rimraf": "^2.5.4",
     "snazzy": "^5.0.0",
     "standard": "^8.0.0",
     "tap-summary": "^3.0.1",
