--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,9 @@ before_install:
   - "npm install npm -g"
 notifications:
   email: false
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - libstdc++-4.9-dev
