--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chalkline": "0.0.5",
     "cli-spinners": "^0.3.0",
     "cross-spawn": "^5.0.1",
+    "espree": "^3.3.2",
     "inquirer": "^1.1.2",
     "left-pad": "^1.1.1",
     "lodash": "^4.14.1",
