--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - '6'
   - '7'
 before_install:
-  - "npm install npm -g"
+  - "npm install nodegit --build-from-source && npm install npm -g"
 notifications:
   email: false
 addons:
