--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
   - '6'
   - '7'
+env:
+  - CXX=g++-4.8
 notifications:
   email: false
 addons:
@@ -9,4 +11,5 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
+      - g++-4.8
       - libstdc++-4.9-dev
