adding a check for installation of yarn
the check is pretty simple, it makes sure that if a yarn.lock file is in the cwd that's being installed to, yarn is being used for installation.

I'm not 100% sure what `npm install -s` is supposed to do differently than `npm install`, and I couldn't find an alternative for yarn, so I kept it at this.

Let me know if I can do anything better or another way

Have a nice day!

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cli-spinners": "^1.0.0",
     "cross-spawn": "^5.0.1",
     "espree": "^3.3.2",
+    "has-yarn": "^1.0.0",
     "inquirer": "^2.0.0",
     "left-pad": "^1.1.1",
     "lodash": "^4.14.1",
