--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "mem-fs-editor": "^3.0.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "nodegit": "^0.19.0",
     "pico-lambda": "^2.1.0",
     "ramda": "^0.24.0",
     "resolve": "^1.3.3",
     "rimraf": "^2.6.0",
+    "simple-git": "^1.80.1",
     "walk-back": "^3.0.0",
     "yamljs": "^0.2.10"
   },
